2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (manakai_is_html): Setting to false did not work.

	* HTML.pm.src: HTML5 revision 914 (</ in CDATA, RCDATA).
	HTML5 revision 915 (<nobr>).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revisions 908, 909, 912, and 913 (quirks mode).
	
	* NanoDOM.pm (manakai_is_html, manakai_compat_mode, compat_mode):
	New attributes.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revisions 900, 901, 902, and 911 (<
	in tags).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* .cvsignore: |Entities.html| is added.

	* HTML.pm.src: |$entity_char| is removed and 
	requires |Whatpm::_NamedEntityList| instead.
	HTML5 revision 898 (refc), except that lack of refc
	is parse error.

	* mkentitylist.pl: New script.

	* Makefile (all): |_NamedEntityList.pm| is added.
	(_NamedEntityList.pm, Entities.html): New rules.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Parse errors immediately after U+000D
	were ignored and U+000D immediately following another
	U+000D was not converted to U+000A.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (set_inner_html): HTML5 revision 892 (adopt
	nodes before appended).  Parser was not ready for NULL
	parse error and escape flag.

	* NanoDOM.pm (adopt_node): New.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revision 886 (insane comment in
	CDATA and RCDATA).  Note that current implementation
	is simply repeating what the spec says and it is maybe not
	a best way to do it.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revision 884 (</form> don't close
	the form element if a descendant element without implied end tag has
	still been open).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: HTML5 revision 881 (Make |id| attribute with 
	space characters non-conforming).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: An error message was incorrect.