@@ -1,7 +1,7 @@
 1..873
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Jun 23 22:02:51 2007
-# Current time GMT:   Sat Jun 23 13:02:51 2007
+# Current time local: Sat Jun 23 23:21:34 2007
+# Current time GMT:   Sat Jun 23 14:21:34 2007
 # Using Test.pm version 1.25
 Prototype mismatch: sub Message::DOM::DOMImplementation::get_uri_from_charset_name: none vs ($$$) at /home/wakaba/work/manakai/lib/Message/Charset/Encode.pm line 607, <$file> line 5.
 Prototype mismatch: sub Message::DOM::DOMImplementation::get_charset_name_from_uri: none vs ($$$) at /home/wakaba/work/manakai/lib/Message/Charset/Encode.pm line 608, <$file> line 5.
