@@ -1,7 +1,7 @@
 1..780
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Jun 23 22:02:37 2007
-# Current time GMT:   Sat Jun 23 13:02:37 2007
+# Current time local: Sat Jun 23 23:21:11 2007
+# Current time GMT:   Sat Jun 23 14:21:11 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
