@@ -1,7 +1,7 @@
 1..472
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Jun 23 22:02:40 2007
-# Current time GMT:   Sat Jun 23 13:02:40 2007
+# Current time local: Sat Jun 23 23:21:17 2007
+# Current time GMT:   Sat Jun 23 14:21:17 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
@@ -155,8 +155,8 @@ not ok 91
 #    Expected: "9" (Parse error: <!-----><font><div>hello<table>excite!<b>me!<th><i>please!</tr><!--X-->; 1:7:dash in comment, 1:15:no DOCTYPE, 1:33:in table:#character, 1:34:in table:#character, 1:35:in table:#character, 1:36:in table:#character, 1:37:in table:#character, 1:38:in table:#character, 1:39:in table:#character, 1:42:in table:b, 1:43:in table:#character, 1:44:in table:#character, 1:45:in table:#character, 1:49:not closed:b, 1:49:missing start tag:tr, 1:64:not closed:i, 1:71:not closed:tbody;7: unexpected '-' character after two '-' characters while parsing comment, 14: missing document type declaration, 40: unexpected node in table context, 41: unexpected node in table context, 46: unexpected node in table context, 48: required tr element start tag implied by unexpected th element start tag, 63: unexpected th element end tag implied other end tags, 72: unexpected end of file implied table element end tag, 72: mismatched body element end tag (premature end of file?))
 ok 92
 not ok 93
-# Test 93 got: "2" (t/HTML-tree.t at line 133 fail #47)
-#    Expected: "0" (Parse error: <!DOCTYPE HTML><li>hello<li>world<ul>how<li>do</ul>you</body><!--do-->; 1:62:not closed:li, 1:70:after body:/li;)
+# Test 93 got: "1" (t/HTML-tree.t at line 133 fail #47)
+#    Expected: "0" (Parse error: <!DOCTYPE HTML><li>hello<li>world<ul>how<li>do</ul>you</body><!--do-->; 1:70:after body:/li;)
 ok 94
 ok 95
 ok 96
@@ -353,8 +353,8 @@ not ok 198
 ok 199
 ok 200
 not ok 201
-# Test 201 got: "9" (t/HTML-tree.t at line 133 fail #101)
-#     Expected: "7" (Parse error: <body><body><base><link><meta><title><p></title><body><p></body>; 1:7:no DOCTYPE, 1:13:in body:body, 1:19:in body:base, 1:25:in body:link, 1:31:in body:meta, 1:38:in body:title, 1:55:in body:body, 1:64:not closed:p, 1:64:after body:/p;6: missing document type declaration, 12: unexpected body element start tag, 18: base element start tag out of place, 24: link element start tag out of place, 30: meta element start tag out of place, 37: title element start tag out of place, 54: unexpected body element start tag)
+# Test 201 got: "8" (t/HTML-tree.t at line 133 fail #101)
+#     Expected: "7" (Parse error: <body><body><base><link><meta><title><p></title><body><p></body>; 1:7:no DOCTYPE, 1:13:in body:body, 1:19:in body:base, 1:25:in body:link, 1:31:in body:meta, 1:38:in body:title, 1:55:in body:body, 1:64:after body:/p;6: missing document type declaration, 12: unexpected body element start tag, 18: base element start tag out of place, 24: link element start tag out of place, 30: meta element start tag out of place, 37: title element start tag out of place, 54: unexpected body element start tag)
 not ok 202
 # Test 202 got: "| <html>\n|   <head>\n|     <base>\n|     <link>\n|     <meta>\n|     <title>\n|       \"<p>\"\n|   <body>\n|     <p>\n" (t/HTML-tree.t at line 135 fail #101)
 #     Expected: "| <html>\n|   <head>\n|     <title>\n|       \"<p>\"\n|   <body>\n|     <base>\n|     <link>\n|     <meta>\n|     <p>\n" (Document tree: <body><body><base><link><meta><title><p></title><body><p></body>)
@@ -526,7 +526,9 @@ not ok 286
 #     Expected: "| <!DOCTYPE html>\n| <html>\n|   <head>\n|     <script>\n|       type=\"text/x-foobar;baz\"\n|       \"X\"\n|   <body>\n" (Document tree: <!doctypehtml><scrIPt type=text/x-foobar;baz>X</SCRipt)
 #     Line 7 is missing:
 #      - "|   <body>\n"
-ok 287
+not ok 287
+# Test 287 got: "1" (t/HTML-tree.t at line 133 fail #144)
+#     Expected: "2" (Parse error: &; 1:1:no DOCTYPE;No doctype., Unfinished entity.)
 ok 288
 ok 289
 ok 290
@@ -1000,3 +1002,39 @@ ok 555
 ok 556
 ok 557
 ok 558
+not ok 559
+# Test 559 got: "2" (t/HTML-tree.t at line 133 fail #280)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><ul></body>; 1:26:not closed:ul, 1:26:not closed:ul;ul not closed)
+ok 560
+not ok 561
+# Test 561 got: "3" (t/HTML-tree.t at line 133 fail #281)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><ul><li></body>; 1:30:not closed:ul, 1:30:after body:/li, 1:30:not closed:ul;ul not closed)
+ok 562
+not ok 563
+# Test 563 got: "2" (t/HTML-tree.t at line 133 fail #282)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl></body>; 1:26:not closed:dl, 1:26:not closed:dl;dl not closed)
+ok 564
+not ok 565
+# Test 565 got: "3" (t/HTML-tree.t at line 133 fail #283)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl><dt></body>; 1:30:not closed:dl, 1:30:after body:/dt, 1:30:not closed:dl;dl not closed)
+ok 566
+not ok 567
+# Test 567 got: "3" (t/HTML-tree.t at line 133 fail #284)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl><dd></body>; 1:30:not closed:dl, 1:30:after body:/dd, 1:30:not closed:dl;dl not closed)
+ok 568
+not ok 569
+# Test 569 got: "1" (t/HTML-tree.t at line 133 fail #285)
+#     Expected: "0" (Parse error: <!DOCTYPE HTML><p></body>; 1:25:after body:/p;)
+ok 570
+not ok 571
+# Test 571 got: "2" (t/HTML-tree.t at line 133 fail #286)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><tr><td></body>; 1:37:unmatched end tag:body, 1:37:not closed:tbody;table not closed)
+ok 572
+not ok 573
+# Test 573 got: "2" (t/HTML-tree.t at line 133 fail #287)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><tr><th></body>; 1:37:unmatched end tag:body, 1:37:not closed:tbody;table not closed)
+ok 574
+not ok 575
+# Test 575 got: "2" (t/HTML-tree.t at line 133 fail #288)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><thead><tr><td></body>; 1:44:unmatched end tag:body, 1:44:not closed:thead;table not closed)
+ok 576
