@@ -1,5 +1,12 @@
 2007-06-23  Wakaba  <wakaba@suika.fam.cx>
 
+	* tokenizer-test-1.test: Tests for conforming bare |&|
+	are added.
+
+	* tree-test-1.dat: Tests for |</body>| are added.
+
+2007-06-23  Wakaba  <wakaba@suika.fam.cx>
+
 	* tree-test-1.dat: Always use uppercase document type name.
 
 2007-06-23  Wakaba  <wakaba@suika.fam.cx>
