@@ -1,5 +1,10 @@
 2007-06-23  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: HTML5 revision 916 (</body>).
+	HTML5 revision 917 (conforming bare &).
+
+2007-06-23  Wakaba  <wakaba@suika.fam.cx>
+
 	* NanoDOM.pm (manakai_is_html): Setting to false did not work.
 
 	* HTML.pm.src: HTML5 revision 914 (</ in CDATA, RCDATA).
